<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo3"
    android:padding="30dp"
    tools:context=".Administrador">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="250dp"
        android:layout_height="135dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="#9EEF9F"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/tvGestionProducto"
        />

    <EditText
        android:id="@+id/etCodigoProducto"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:hint="@string/etCodigoProducto"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="number"/>

    <EditText
        android:id="@+id/etNombreProducto"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:hint="@string/etNombreProducto"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/etPrecioProducto"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:hint="@string/etPrecioProducto"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="number"/>

    <Button
        android:id="@+id/btnIngresarProducto"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="#9EEF9F"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/btnIngresarProducto"/>

    <Button
        android:id="@+id/btnBuscarProducto"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:backgroundTint="#9EEF9F"
        android:text="@string/btnBuscarProducto"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnModificarProducto"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:backgroundTint="#9EEF9F"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/btnModificarProducto"/>

    <Button
        android:id="@+id/btnEliminarProducto"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:backgroundTint="#9EEF9F"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/btnEliminarProducto"/>

</LinearLayout>