<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="135dp"
        android:layout_gravity="center"
        android:layout_marginVertical="50dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/tvLogin"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:textSize="35sp" />


    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:hint="@string/etUsuario"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/etContraseña"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:hint="@string/etContraseña"
        android:layout_gravity="center"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:backgroundTint="@color/black"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="#9EEF9F"
        android:text="@string/btnIngresar"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:backgroundTint="#9EEF9F"
        android:text="@string/btnRegistrar"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp" />


</LinearLayout>