<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo1"
    android:padding="30dp"
    tools:context=".Principal">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="250dp"
        android:layout_height="135dp"
        android:layout_gravity="center"
        android:layout_marginVertical="50dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:padding="20dp"
        android:textColor="@color/black"
        android:text="@string/tvBienvenida" />

    <TextView
        android:id="@+id/etSaludoUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/tvNombreUsuario" />

    <Button
        android:id="@+id/btnProductos"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:backgroundTint="#9EEF9F"
        android:text="@string/btnVerProductos"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp" />

</LinearLayout>